--- a/web/index.html
+++ b/web/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Resumes</title>
 </head>
 <body>
-Resumes Connected
+Resumes
 </body>
 </html>
