Lesson16 add sections

--- a/web/index.html
+++ b/web/index.html
@@ -5,6 +5,6 @@
     <title>Resumes</title>
 </head>
 <body>
-Resumes
+<a href="resume" title="Go to resumes database">Resume Database Management</a>
 </body>
 </html>
